# YZTA057

./: .env  .env.example  .gitignore  Dockerfile  GEMINI_SETUP.md  LICENSE  PROJECT_DETAILS.md  QUICK_START.md  README.md  README_BACKEND.md  SYSTEM_INFO.md  TROUBLESHOOTING.md  USER_GUIDE.md  alembic.ini  data_loader.py  docker-compose.yml  dvc.yaml  package.json  pytest.ini  requirements.txt
app/: db.py  init_db.py  main.py  models.py  schemas.py
app/routers/: ai.py  auth.py  observations.py  students.py
backend/: .env  Dockerfile  alembic.ini  pytest_output.txt  requirements.txt
backend/fl_server/: Dockerfile
fl-node/: create_fake_model.py  data_loader.py  dvc.yaml  pyproject.toml
frontend/: package-lock.json  package.json
frontend-example/: README.md  package-lock.json  package.json
frontend-example/public/: index.html
frontend-example/src/: AiSuggest.js  App.js  Auth.js  StudentList.js  api.js
mobile-app/: App.tsx  package-lock.json
mobile-app/src/: AppNavigator.tsx  CaseDetailScreen.tsx  CreateCaseScreen.tsx  LoginScreen.tsx  ReportDetailScreen.tsx  SplashScreen.tsx  api.ts
mobile-app/src/Navigation/: AppTabs.tsx
mobile-app/src/screens/: CasesScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx
mobile-app/src/services/: api.ts
screenshots/mockups/: ai-analysis.html  daily-scrum-meeting.html  observation-form.html  product-dashboard.html  sprint-board.html  student-profile.html
